# update-cpe

./: .gitignore  Pipfile  README.md  mkcmd.py  pyproject.toml  reboot.py  ubnt.py  updatecpe.py
