[tool.poetry]
name = "update-cpe"
version = "0.1.0"
description = "Atualiza CPE Ubiquiti XM e XW"
authors = ["Israel P. da Silva <israel4p@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^2.9.2"
scp = "^0.14.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
